# WriteSync

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  MEMORY.md  OPERATIONS.md  README.md  package-lock.json  pyproject.toml
docs/: competitor-analysis.md  storyforge-reference.md  web-ui-flow.md
docs/dynamic/: context.json  story.md
docs/standards/: 校对清单.md  编辑自查清单.md  节奏评估标准.md  选题检查清单.md
docs/techniques/: 人物弧线写法.md  开篇三章技法.md  爽点设计.md  钩子技法.md
docs/templates/: 世界观模板.md  摘要模板.md  章纲模板.md  角色卡模板.md  选题卡模板.md
scripts/: arch_lint.py
src/: __init__.py  cli.py
src/agents/: __init__.py  character.py  context.py  context_registry.py  expansion.py  fact_ledger.py  foreshadow.py  inspire.py  item_ledger.py  narrative.py  novel_editor.py  outline.py  planning.py  proofreader.py  references.py  response_models.py  state_table.py  (+8 more)
tests/: e2e_write_agents.py  test_api_respond_edits.py  test_apply_edits.py  test_confirm_loop_regression.py  test_context.py  test_context_e2e.py  test_context_e2e_playwright.py  test_decision_chain.py  test_doc_importer.py  test_e2e_full_playwright.py  test_e2e_orchestrator.py  test_e2e_playwright.py  test_export.py  test_full_flow_api.py  test_full_flow_playwright.py  test_full_flow_sse.py  test_grid_layout.py  test_orchestrator_phase1.py  test_orchestrator_phase2.py  test_persistence.py  test_phase4.py  test_phase6.py  test_phase7.py  test_playwright.py  test_playwright_comprehensive.py  test_response_models.py  test_round1_connectivity.py  test_smoke_full_flow.py  test_stale_tracker.py  test_step_by_step.py  test_v04_webnovel.py
(+63 files in other folders)
